--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2674,12 +2674,15 @@ a {
   -ms-flex-pack: justify;
   justify-content: space-between;
   cursor: pointer; }
+  .card-main-block-description-row-item-list-item svg {
+    width: 70px; }
   .card-main-block-description-row-item-list-item:nth-child(-n+3) {
     margin-bottom: 10px; }
 
 .card-main-block-description-row-item-list-item__text {
   margin-top: 10px;
-  font-size: 14px; }
+  font-size: 14px;
+  text-align: center; }
 
 .card-main-block-description-row-item-list-item.active {
   -webkit-border-radius: 4px;
