--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4424,9 +4424,8 @@ a {
   height: 30px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  border: 0.5px solid #D71921;
   color: #FFF;
-  background: #FF5050;
+  background: #FF9B06;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -4441,6 +4440,10 @@ a {
   justify-content: center;
   text-transform: uppercase;
   font-size: 15px;
+  &_hot {
+    background: url(../img/icons/hot.svg) no-repeat center center;
+    background-size: cover;
+  }
 }
 
 .grey-line {
