--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4398,7 +4398,6 @@ a {
   height: 30px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  border: 1px solid #D71921;
   color: #D71921;
   display: -webkit-box;
   display: -webkit-flex;
@@ -4414,6 +4413,14 @@ a {
   justify-content: center;
   text-transform: uppercase;
   font-size: 11px;
+  &_mod {
+    background: url(../img/icons/hit.svg) no-repeat center center;
+    background-size: cover;
+  }
+  &_new {
+    background: url(../img/icons/new.svg) no-repeat center center;
+    background-size: cover;
+  }
 }
 
 .card-item-row-percentage {
@@ -4424,8 +4431,8 @@ a {
   height: 30px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  color: #FFF;
-  background: #FF9B06;
+  color: #FF1506;
+  background: transparent;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -4439,7 +4446,8 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   text-transform: uppercase;
-  font-size: 15px;
+  background: url(../img/icons/percentage.svg) no-repeat center center;
+  background-size: cover;
   &_hot {
     background: url(../img/icons/hot.svg) no-repeat center center;
     background-size: cover;
@@ -5624,9 +5632,9 @@ a {
   }
   &:nth-child(2) {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 385px;
-    -ms-flex: 0 1 385px;
-    flex: 0 1 385px;
+    -webkit-flex: 0 1 460px;
+    -ms-flex: 0 1 460px;
+    flex: 0 1 460px;
     margin-right: 20px;
     @include w480 {
       margin-right: 0;
@@ -5652,7 +5660,7 @@ a {
 }
 
 .discont-row-item-gallery-mini {
-  width: 306px;
+  width: 360px;
   height: 80px;
   @include w480 {
     width: 100%;
@@ -5700,7 +5708,7 @@ a {
 }
 
 .discont-row-item-gallery-big {
-  width: 306px;
+  width: 360px;
   margin-bottom: 10px;
   @include w480 {
     width: 100%;
@@ -5708,7 +5716,7 @@ a {
 }
 
 .discont-row-item-gallery-big-item {
-  width: 306px;
+  width: 360px;
   height: 300px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
@@ -5716,7 +5724,7 @@ a {
   outline: none;
   position: relative;
   img {
-    width: 100%;
+    height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
