--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3970,7 +3970,6 @@ a {
   height: 30px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  border: 1px solid #D71921;
   color: #D71921;
   display: -webkit-box;
   display: -webkit-flex;
@@ -3986,6 +3985,14 @@ a {
   justify-content: center;
   text-transform: uppercase;
   font-size: 11px; }
+  .card-item-row-hit_mod {
+    background: url(../img/icons/hit.svg) no-repeat center center;
+    -webkit-background-size: cover;
+            background-size: cover; }
+  .card-item-row-hit_new {
+    background: url(../img/icons/new.svg) no-repeat center center;
+    -webkit-background-size: cover;
+            background-size: cover; }
 
 .card-item-row-percentage {
   position: absolute;
@@ -3995,8 +4002,8 @@ a {
   height: 30px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  color: #FFF;
-  background: #FF9B06;
+  color: #FF1506;
+  background: transparent;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -4010,7 +4017,9 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   text-transform: uppercase;
-  font-size: 15px; }
+  background: url(../img/icons/percentage.svg) no-repeat center center;
+  -webkit-background-size: cover;
+          background-size: cover; }
   .card-item-row-percentage_hot {
     background: url(../img/icons/hot.svg) no-repeat center center;
     -webkit-background-size: cover;
@@ -5127,9 +5136,9 @@ a {
                 flex: 1; } }
   .discont-row-item:nth-child(2) {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 385px;
-    -ms-flex: 0 1 385px;
-    flex: 0 1 385px;
+    -webkit-flex: 0 1 460px;
+    -ms-flex: 0 1 460px;
+    flex: 0 1 460px;
     margin-right: 20px; }
     @media screen and (max-width: 480px) {
       .discont-row-item:nth-child(2) {
@@ -5157,7 +5166,7 @@ a {
                 flex: 1; } }
 
 .discont-row-item-gallery-mini {
-  width: 306px;
+  width: 360px;
   height: 80px; }
   @media screen and (max-width: 480px) {
     .discont-row-item-gallery-mini {
@@ -5198,14 +5207,14 @@ a {
         width: 100%; } }
 
 .discont-row-item-gallery-big {
-  width: 306px;
+  width: 360px;
   margin-bottom: 10px; }
   @media screen and (max-width: 480px) {
     .discont-row-item-gallery-big {
       width: 100%; } }
 
 .discont-row-item-gallery-big-item {
-  width: 306px;
+  width: 360px;
   height: 300px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
@@ -5213,7 +5222,7 @@ a {
   outline: none;
   position: relative; }
   .discont-row-item-gallery-big-item img {
-    width: 100%;
+    height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
