--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5717,14 +5717,14 @@ a {
 
 .discont-row-item-gallery-big-item {
   width: 360px;
-  height: 300px;
+  height: 200px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   overflow: hidden;
   outline: none;
   position: relative;
   img {
-    height: 100%;
+    width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
