--- a/app/css/main.css
+++ b/app/css/main.css
@@ -104,7 +104,8 @@ a {
 
 .container {
   max-width: 1440px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  position: relative; }
 
 @media screen and (max-width: 1024px) {
   .main {
@@ -649,9 +650,6 @@ a {
     .header-nav-list-ul-outter.active-4:before, .header-nav-list-ul-outter.active-4:after {
       background: #fcdc91; }
 
-.header-nav-list-ul-outter__shadow {
-  border-top: 1px solid #DEDEDE; }
-
 .header-nav-list-item {
   width: 127px;
   display: -webkit-box;
@@ -748,6 +746,10 @@ a {
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
             transform: translateX(-50%); }
+  .header-nav-list-item-ul-side-ul-item .transformed-mod {
+    -webkit-transform: translateX(-13%);
+        -ms-transform: translateX(-13%);
+            transform: translateX(-13%); }
 
 .header-nav-list-item-ul-side-ul-item__icon {
   margin-right: 15px;
@@ -1056,6 +1058,7 @@ a {
     -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+    height: 100%;
     width: 100%;
     z-index: 1;
     margin: 0 auto; }
@@ -2751,6 +2754,12 @@ a {
     width: 10px;
     border-right: 1px solid #737373;
     border-bottom: 1px solid #737373; }
+  .card-main-block-description-row-item-tooltip__card_mod {
+    -webkit-transform: translateX(-90%);
+    -ms-transform: translateX(-90%);
+    transform: translateX(-90%); }
+    .card-main-block-description-row-item-tooltip__card_mod:after {
+      left: 90%; }
 
 .card-main-block-description-row-item-ul-horiz {
   display: block; }
@@ -5230,8 +5239,10 @@ a {
         -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%); }
   .discont-row-item-gallery-big-item .card-main-block__like {
-    top: 20px;
-    right: 20px; }
+    top: 5px;
+    right: 5px;
+    width: 27px;
+    height: 25px; }
 
 .discont-row-item-row {
   display: -webkit-box;
@@ -7290,19 +7301,55 @@ a {
             justify-content: center; } }
 
 .mech-row-gallery-big {
-  width: 324px;
+  width: 360px;
+  height: 200px;
   margin-right: 40px;
   margin-bottom: 20px; }
   .mech-row-gallery-big .mech-row-img {
-    width: 324px; }
+    width: 360px;
+    height: 200px;
+    position: relative;
+    outline: none; }
     .mech-row-gallery-big .mech-row-img img {
-      width: 324px; }
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
+      width: 100%; }
 
 .mech-row-gallery-mini {
-  width: 324px; }
+  width: 340px; }
+  .mech-row-gallery-mini-wrapper {
+    position: relative;
+    width: 340px; }
+  .mech-row-gallery-mini__arrow-prev {
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    -webkit-transform: translateY(-50%) scale(0.7);
+        -ms-transform: translateY(-50%) scale(0.7);
+            transform: translateY(-50%) scale(0.7);
+    cursor: pointer;
+    opacity: 0.5; }
+    .mech-row-gallery-mini__arrow-prev:hover {
+      opacity: 1; }
+  .mech-row-gallery-mini__arrow-next {
+    position: absolute;
+    top: 50%;
+    right: -20px;
+    -webkit-transform: translateY(-50%) scale(0.7);
+        -ms-transform: translateY(-50%) scale(0.7);
+            transform: translateY(-50%) scale(0.7);
+    cursor: pointer;
+    opacity: 0.5; }
+    .mech-row-gallery-mini__arrow-next:hover {
+      opacity: 1; }
   .mech-row-gallery-mini .mech-row-img {
     width: 90px;
     height: 90px;
+    outline: none;
     margin-right: 0px;
     outline: none; }
     .mech-row-gallery-mini .mech-row-img img {
@@ -7505,3 +7552,120 @@ a {
           display: none; } }
       .designers-block-gallery-arrow:hover {
         opacity: 1; }
+
+.card-preview-cross {
+  position: absolute;
+  bottom: -webkit-calc(100% - 10px);
+  bottom: calc(100% - 10px);
+  right: -webkit-calc(100% + 5px);
+  right: calc(100% + 5px);
+  opacity: 0.5;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  display: none; }
+  .card-preview-cross__line {
+    width: 20px;
+    height: 1px;
+    background: #000;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg); }
+    .card-preview-cross__line:nth-child(2) {
+      -webkit-transform: rotate(-45deg) translateY(-1px);
+          -ms-transform: rotate(-45deg) translateY(-1px);
+              transform: rotate(-45deg) translateY(-1px); }
+  .card-preview-cross:hover {
+    opacity: 1; }
+
+.card-preview-arrow {
+  position: absolute;
+  right: -webkit-calc(100% + 10px);
+  right: calc(100% + 10px);
+  top: 50%;
+  display: none;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  opacity: 0.5;
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  cursor: pointer; }
+  .card-preview-arrow:hover {
+    opacity: 1; }
+
+.card-preview {
+  position: fixed;
+  bottom: 50px;
+  right: -10px;
+  width: 410px;
+  padding: 20px 70px 20px 20px;
+  background: #FFF;
+  z-index: 100;
+  background: #FFFFFF;
+  border: 1px solid #AEAEAE;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  -webkit-transform: translateX(200%);
+      -ms-transform: translateX(200%);
+          transform: translateX(200%); }
+  .card-preview-info {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 10px; }
+    .card-preview-info-item {
+      font-size: 14px;
+      color: #5E5E5E;
+      margin-right: 50px;
+      white-space: nowrap; }
+      .card-preview-info-item:last-child {
+        margin-right: 0px; }
+      .card-preview-info-item span {
+        color: #000; }
+  .card-preview-cost {
+    text-align: center; }
+  .card-preview.active {
+    -webkit-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+            transform: translateX(0%); }
+    .card-preview.active .card-preview-cross {
+      display: block; }
+  .card-preview.closed {
+    -webkit-transform: translate(95%);
+        -ms-transform: translate(95%);
+            transform: translate(95%); }
+    .card-preview.closed .card-preview-arrow {
+      display: block; }
