--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -34,6 +34,7 @@ a {
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  position: relative;
 }
 
 @media screen and (max-width: 1024px) {
@@ -658,7 +659,7 @@ a {
 }
 
 .header-nav-list-ul-outter__shadow {
-  border-top: 1px solid #DEDEDE;
+  // border-top: 1px solid #DEDEDE;
 }
 
 .header-nav-list-item {
@@ -779,6 +780,9 @@ a {
   .transformed {
       svg{
         transform: translateX(-50%);
+      }
+      &-mod {
+        transform: translateX(-13%);
       }
     }
 }
@@ -1093,6 +1097,7 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    height: 100%;
     width: 100%;
     z-index: 1;
     margin: 0 auto;
@@ -3053,6 +3058,14 @@ a {
     width: 10px;
     border-right: 1px solid #737373;
     border-bottom: 1px solid #737373;
+  }
+  &_mod {
+    -webkit-transform: translateX(-90%);
+    -ms-transform: translateX(-90%);
+    transform: translateX(-90%);
+    &:after {
+      left: 90%;
+    }
   }
 }
 
@@ -5731,8 +5744,10 @@ a {
     transform: translate(-50%, -50%);
   }
   .card-main-block__like {
-    top: 20px;
-    right: 20px;
+    top: 5px;
+    right: 5px;
+    width: 27px;
+    height: 25px;
   }
 }
 
@@ -7854,22 +7869,57 @@ a {
 }
 
 .mech-row-gallery-big {
-  width: 324px;
+  width: 360px;
+  height: 200px;
   margin-right: 40px;
   .mech-row-img {
-    width: 324px;
+    width: 360px;
+    height: 200px;
+    position: relative;
+    outline: none;
     img {
-      width: 324px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
     }
   }
   margin-bottom: 20px;
 }
 
 .mech-row-gallery-mini {
-  width: 324px;
+  width: 340px;
+  &-wrapper {
+    position: relative;
+    width: 340px;
+  }
+  &__arrow-prev {
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    transform: translateY(-50%) scale(0.7);
+    cursor: pointer;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  &__arrow-next {
+    position: absolute;
+    top: 50%;
+    right: -20px;
+    transform: translateY(-50%) scale(0.7);
+    cursor: pointer;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+  }
   .mech-row-img {
     width: 90px;
     height: 90px;
+    outline: none;
     margin-right: 0px;
     outline: none;
     img {
@@ -8029,6 +8079,98 @@ a {
       &:hover {
         opacity: 1;
       }
+    }
+  }
+}
+
+.card-preview-cross {
+  position: absolute;
+  bottom: calc(100% - 10px);
+  right: calc(100% + 5px);
+  opacity: 0.5;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease-in-out;
+  display: none;
+  &__line {
+    width: 20px;
+    height: 1px;
+    background: #000;
+    transform: rotate(45deg);
+    &:nth-child(2) {
+      transform: rotate(-45deg) translateY(-1px);
+    }
+  }
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.card-preview-arrow {
+  position: absolute;
+  right: calc(100% + 10px);
+  top: 50%;
+  display: none;
+  transform: translateY(-50%);
+  opacity: 0.5;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.card-preview {
+  position: fixed;
+  bottom: 50px;
+  right: -10px;
+  width: 410px;
+  padding: 20px 70px 20px 20px;
+  background: #FFF;
+  z-index: 100;
+  background: #FFFFFF;
+  border: 1px solid #AEAEAE;
+  box-sizing: border-box;
+  box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.3s ease-in-out;
+  transform: translateX(200%);
+  // transform: translateX(95%);
+  &-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    &-item {
+      font-size: 14px;
+      color: #5E5E5E;
+      margin-right: 50px;
+      white-space: nowrap;
+      &:last-child {
+        margin-right: 0px;
+      }
+      span {
+        color: #000;
+      }
+    }
+  }
+  &-cost {
+    text-align: center;
+  }
+  &.active {
+    transform: translateX(0%);
+    .card-preview-cross {
+      display: block;
+    }
+  }
+  &.closed {
+    transform: translate(95%);
+    .card-preview-arrow {
+      display: block;
     }
   }
 }
