--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -410,6 +410,11 @@ a {
 .header-wrapper-item-list_width1 {
   width: 400px;
   margin: 0 30px;
+  .header-wrapper-item-list-item:nth-child(2) {
+    .header-wrapper-item-list-item-inner-ul {
+      flex-direction: column-reverse;
+    }
+  }
 }
 
 .header-wrapper-item-list_width2 {
@@ -754,7 +759,6 @@ a {
   align-items: center;
   height: 61px;
   padding-right: 10px;
-  margin-bottom: 10px;
   cursor: pointer;
   outline: none;
   color: #000;
@@ -2571,10 +2575,8 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
   position: relative;
   &:nth-child(2) {
     margin-right: 0px;
@@ -2598,10 +2600,11 @@ a {
 
 .card-main-block-gallery-big {
   position: relative;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-box-flex: 0 440px;
+  -webkit-flex: 0 440px;
+  -ms-flex: 0 440px;
+  flex: 0 440px;
+  margin-bottom: 20px;
 }
 
 .card-main-block-gallery-big-item {
@@ -2622,18 +2625,17 @@ a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-right: 15px;
+  justify-content: flex-start;
 }
 
 .card-main-block-gallery-mini__item {
-  margin-bottom: 20px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2647,11 +2649,12 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   height: 80px;
-  width: 95px;
+  width: 144px;
   border: 1px solid transparent;
   cursor: pointer;
   img {
-    width: 100%;
+    
+    height: 100%;
   }
   &.active {
     border: 1px solid #D71921;
@@ -7276,6 +7279,9 @@ a {
       color: #D71921;
     }
   }
+  .card-main-block-gallery-big {
+    flex: 0 1 300px;
+  }
   .row-yellow {
     background: #FDFFB0;
     padding: 20px;
@@ -7935,11 +7941,11 @@ a {
   display: flex;
   align-items: center;
   a {
-    width: 90px;
+    width: 168px;
     height: 90px;
     margin-right: 20px;
     img {
-      width: 90px;
+      width: 168px;
       height: 90px;
     }
   }
@@ -8140,6 +8146,9 @@ a {
   transition: 0.3s ease-in-out;
   transform: translateX(200%);
   // transform: translateX(95%);
+  @include w480 {
+    display: none;
+  }
   &-info {
     display: flex;
     align-items: center;
