--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1055,7 +1055,10 @@ a {
   outline: none;
   height: -webkit-calc(100vh - 165px);
   height: calc(100vh - 165px);
-  position: relative; }
+  position: relative;
+  background: url(../img/gallery-1.png) no-repeat center center;
+  -webkit-background-size: cover;
+          background-size: cover; }
   .first-slider-item img {
     position: absolute;
     top: 50%;
@@ -1067,6 +1070,13 @@ a {
     width: 100%;
     z-index: 1;
     margin: 0 auto; }
+  .first-slider-item a {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%; }
 
 @media screen and (max-width: 480px) {
   .first-slider-item {
