--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1096,6 +1096,8 @@ a {
   outline: none;
   height: calc(100vh - 165px);
   position: relative;
+  background: url(../img/gallery-1.png) no-repeat center center;
+  background-size: cover;
   img {
     position: absolute;
     top: 50%;
@@ -1105,6 +1107,11 @@ a {
     width: 100%;
     z-index: 1;
     margin: 0 auto;
+  }
+  a {
+    display: flex;
+    width: 100%;
+    height: 100%;
   }
 }
 
