--- a/app/css/main.css
+++ b/app/css/main.css
@@ -616,9 +616,7 @@ a {
     display: block;
     position: absolute;
     width: 100vw;
-    height: -webkit-calc(100% - 1px);
-    height: calc(100% - 1px);
-    border-top: 1px solid #DEDEDE;
+    height: 100%;
     background: #FFF;
     top: 0;
     right: 100%;
@@ -628,9 +626,7 @@ a {
     display: block;
     position: absolute;
     width: 100vw;
-    border-top: 1px solid #DEDEDE;
-    height: -webkit-calc(100% - 1px);
-    height: calc(100% - 1px);
+    height: 100%;
     background: #FFF;
     top: 0;
     left: 100%;
@@ -2057,6 +2053,10 @@ a {
   -ms-flex-align: center;
   align-items: center;
   margin-bottom: 10px; }
+  .footer-top-item-list__item_logo a {
+    max-width: 155px; }
+    .footer-top-item-list__item_logo a img {
+      width: 100%; }
 
 .footer-top-item-list__item_hover:hover a {
   -webkit-transform: translateX(5px);
