--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1297,6 +1297,7 @@ a {
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
+  padding-bottom: 0px;
 }
 
 @media screen and (max-width: 480px) {
@@ -1347,7 +1348,7 @@ a {
 
 .in-work-item__img {
   height: 90px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   img {
     height: 100%;
     @include w480 {
