--- a/app/css/main.css
+++ b/app/css/main.css
@@ -632,9 +632,9 @@ a {
     left: 100%;
     z-index: 0; }
   .header-nav-list-ul-outter.active-0 {
-    background: #eedc82; }
+    background: #dec0dc; }
     .header-nav-list-ul-outter.active-0:before, .header-nav-list-ul-outter.active-0:after {
-      background: #eedc82; }
+      background: #dec0dc; }
   .header-nav-list-ul-outter.active-1 {
     background: #c7d0cc; }
     .header-nav-list-ul-outter.active-1:before, .header-nav-list-ul-outter.active-1:after {
@@ -784,7 +784,7 @@ a {
   color: #FF0000; }
 
 .header-nav-list-item:hover {
-  background: rgba(238, 220, 130, 0.7);
+  background: rgba(222, 192, 220, 0.7);
   opacity: 1; }
 
 .header-nav-list-item:nth-child(2):hover {
@@ -805,7 +805,7 @@ a {
 
 .header-nav-list-item.active {
   opacity: 1;
-  background: rgba(238, 220, 130, 0.7); }
+  background: rgba(222, 192, 220, 0.7); }
 
 .header-nav-list-item:nth-child(2).active {
   background: rgba(199, 208, 204, 0.7);
@@ -1274,9 +1274,14 @@ a {
 
 .in-work-item__head {
   font-size: 20px;
-  font-family: 'Proxima Nova Extrabold', sans-serif;
+  font-family: 'Proxima Nova Semibold', sans-serif;
   font-weight: 900;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  color: #D71921; }
+  @media screen and (max-width: 480px) {
+    .in-work-item__head {
+      text-align: center;
+      font-size: 16px; } }
 
 .in-work-item__img {
   height: 90px;
@@ -1288,11 +1293,13 @@ a {
         width: 100%; } }
 
 .in-work-item__text {
-  text-align: center; }
+  text-align: center;
+  font-size: 16px; }
 
 @media screen and (max-width: 480px) {
   .in-work-item__text {
-    font-size: 14px; } }
+    font-size: 14px;
+    display: none; } }
 
 .choice-of-customers {
   position: relative;
@@ -1653,7 +1660,7 @@ a {
   .needs-list-item:last-child {
     margin-right: 0px; }
   .needs-list-item:nth-child(1) {
-    background: #eedc82; }
+    background: #dec0dc; }
   .needs-list-item:nth-child(2) {
     background: #c7d0cc; }
   .needs-list-item:nth-child(3) {
@@ -1755,7 +1762,8 @@ a {
   .needs-list-item-text__button:active {
     -webkit-box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background: rgba(215, 25, 33, 0.2); }
+    background: #D71921;
+    color: #FFF; }
 
 @media screen and (max-width: 480px) {
   .needs-list-item-text__button {
@@ -4014,7 +4022,10 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   text-transform: uppercase;
-  font-size: 11px; }
+  font-size: 11px;
+  -webkit-transform: scale(1.35) translateX(-5px);
+      -ms-transform: scale(1.35) translateX(-5px);
+          transform: scale(1.35) translateX(-5px); }
   .card-item-row-hit_mod {
     background: url(../img/icons/hit.svg) no-repeat center center;
     -webkit-background-size: cover;
@@ -4049,7 +4060,10 @@ a {
   text-transform: uppercase;
   background: url(../img/icons/percentage.svg) no-repeat center center;
   -webkit-background-size: cover;
-          background-size: cover; }
+          background-size: cover;
+  -webkit-transform: scale(1.35) translateX(-5px);
+      -ms-transform: scale(1.35) translateX(-5px);
+          transform: scale(1.35) translateX(-5px); }
   .card-item-row-percentage_hot {
     background: url(../img/icons/hot.svg) no-repeat center center;
     -webkit-background-size: cover;
@@ -5156,7 +5170,7 @@ a {
     -webkit-flex: 0 1 95px;
     -ms-flex: 0 1 95px;
     flex: 0 1 95px;
-    margin-right: 20px; }
+    margin-right: 30px; }
     @media screen and (max-width: 480px) {
       .discont-row-item:nth-child(1) {
         margin-right: 0px;
@@ -5458,7 +5472,7 @@ a {
   margin-bottom: 10px; }
 
 .discont-row-item-row-list-item-name {
-  width: 180px; }
+  width: 170px; }
   @media screen and (max-width: 480px) {
     .discont-row-item-row-list-item-name {
       width: 100px; } }
@@ -6707,6 +6721,7 @@ a {
   border: 2px solid #D80027;
   z-index: 1000;
   cursor: pointer;
+  background: rgba(216, 0, 39, 0.7);
   -webkit-transition: 0.3s ease-in-out;
   -o-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out; }
@@ -6728,10 +6743,10 @@ a {
         -ms-transform: translate(-50%, -30%) rotate(135deg);
             transform: translate(-50%, -30%) rotate(135deg);
     display: block;
-    width: 20px;
-    height: 20px;
-    border-bottom: 2px solid #D80027;
-    border-left: 2px solid #D80027; }
+    width: 10px;
+    height: 10px;
+    border-bottom: 2px solid #FFF;
+    border-left: 2px solid #FFF; }
   .to-top.active {
     bottom: 20px; }
 
@@ -7643,8 +7658,8 @@ a {
   position: fixed;
   bottom: 50px;
   right: -10px;
-  width: 410px;
-  padding: 20px 70px 20px 20px;
+  width: 330px;
+  padding: 20px 30px 20px 20px;
   background: #FFF;
   z-index: 100;
   background: #FFFFFF;
@@ -7661,34 +7676,89 @@ a {
   -webkit-transform: translateX(200%);
       -ms-transform: translateX(200%);
           transform: translateX(200%); }
+  .card-preview .card-main-block-description-row-btn-wrapper-like {
+    height: 45px;
+    width: 45px; }
+  .card-preview .card-main-block-description-row-btn-wrapper-buy {
+    height: 45px; }
+  .card-preview .card-main-block-description-row-btn-wrapper {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch; }
+  .card-preview .btn-wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    self-align: stretch; }
+  .card-preview-head {
+    text-align: center;
+    font-size: 18px;
+    font-family: Proxima Nova Semibold;
+    margin-bottom: 20px; }
   @media screen and (max-width: 480px) {
     .card-preview {
       display: none; } }
+  .card-preview-img {
+    margin-bottom: 20px; }
   .card-preview-info {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-bottom: 10px; }
     .card-preview-info-item {
       font-size: 14px;
       color: #5E5E5E;
-      margin-right: 50px;
+      margin-bottom: 10px;
       white-space: nowrap; }
       .card-preview-info-item:last-child {
         margin-right: 0px; }
       .card-preview-info-item span {
         color: #000; }
   .card-preview-cost {
-    text-align: center; }
+    text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch; }
+    .card-preview-cost-row {
+      text-align: left;
+      margin-bottom: 20px;
+      font-size: 24px; }
   .card-preview.active {
     -webkit-transform: translateX(0%);
         -ms-transform: translateX(0%);
