--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1242,7 +1242,8 @@ a {
   .in-work {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap; } }
+    flex-wrap: wrap;
+    padding-top: 40px; } }
 
 .in-work-item {
   display: -webkit-box;
@@ -1263,6 +1264,38 @@ a {
   -ms-flex-align: center;
   align-items: center;
   max-width: 275px; }
+  .in-work-item:nth-child(1) .in-work-item__img {
+    -webkit-transform: scale(1.4);
+        -ms-transform: scale(1.4);
+            transform: scale(1.4); }
+    @media screen and (max-width: 480px) {
+      .in-work-item:nth-child(1) .in-work-item__img {
+        -webkit-transform: scale(1.2);
+            -ms-transform: scale(1.2);
+                transform: scale(1.2); } }
+  .in-work-item:nth-child(2) .in-work-item__img {
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2); }
+    @media screen and (max-width: 480px) {
+      .in-work-item:nth-child(2) .in-work-item__img {
+        -webkit-transform: scale(1);
+            -ms-transform: scale(1);
+                transform: scale(1); } }
+  @media screen and (max-width: 480px) {
+    .in-work-item:nth-child(3) .in-work-item__img {
+      -webkit-transform: scale(1);
+          -ms-transform: scale(1);
+              transform: scale(1); } }
+  .in-work-item:nth-child(4) .in-work-item__img {
+    -webkit-transform: scale(0.8);
+        -ms-transform: scale(0.8);
+            transform: scale(0.8); }
+    @media screen and (max-width: 480px) {
+      .in-work-item:nth-child(4) .in-work-item__img {
+        -webkit-transform: scale(1);
+            -ms-transform: scale(1);
+                transform: scale(1); } }
 
 @media screen and (max-width: 480px) {
   .in-work-item {
