--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1306,6 +1306,7 @@ a {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    padding-top: 40px;
   }
 }
 
@@ -1328,6 +1329,37 @@ a {
   -ms-flex-align: center;
   align-items: center;
   max-width: 275px;
+  &:nth-child(1) {
+    .in-work-item__img {
+      transform: scale(1.4);
+      @include w480 {
+        transform: scale(1.2);
+      }
+    }
+  }
+  &:nth-child(2) {
+    .in-work-item__img {
+      transform: scale(1.2);
+      @include w480 {
+        transform: scale(1);
+      }
+    }
+  }
+  &:nth-child(3) {
+    .in-work-item__img {
+      @include w480 {
+        transform: scale(1);
+      }
+    }
+  }
+  &:nth-child(4) {
+    .in-work-item__img {
+      transform: scale(0.8);
+      @include w480 {
+        transform: scale(1);
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
