--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1112,6 +1112,18 @@ a {
     width: 100%;
     height: 100%;
   }
+  &:nth-child(2) {
+    background: url(../img/Kioa-1.jpg) no-repeat center center;
+    background-size: cover;
+  }
+  &:nth-child(3) {
+    background: url(../img/Kioa-2.jpg) no-repeat center center;
+    background-size: cover;
+  }
+  &:nth-child(4) {
+    background: url(../img/Kioa-3.jpg) no-repeat center center;
+    background-size: cover;
+  }
 }
 
 @media screen and (max-width: 480px) {
